enable preview features for java